Bug 79889 - START CENTER: underscore in filename is treated as if it were a period
Summary: START CENTER: underscore in filename is treated as if it were a period
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.3.0.0.beta2
Hardware: Other All
: medium normal
Assignee: Akshay Deep
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks: Start-Center File-Name
  Show dependency treegraph
 
Reported: 2014-06-10 15:23 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-09-20 13:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
showing the same example in the start center (45.42 KB, image/png)
2014-06-10 15:23 UTC, Yousuf Philips (jay) (retired)
Details
zip file containing two html files (947 bytes, application/zip)
2014-06-10 17:27 UTC, Yousuf Philips (jay) (retired)
Details
screenshot (29.61 KB, image/png)
2014-11-05 07:33 UTC, Efe Gürkan YALAMAN
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-06-10 15:23:54 UTC
Created attachment 100825 [details]
showing the same example in the start center

When viewing a filename in start center that has an underscore in it, start center crops the remainder of the filename.

Example filename: TestHTML_before_edit_LO.html
Start Center Display: TestHTML

Tested in Windows (4.2.4 and 4.4 alpha) and Linux (4.2.4 and 4.3 beta 2). Setting this to 4.3 beta 2 so i can be fixed promptly, though the issue must have been present since the start center was introduced in 4.2.
Comment 1 Kevin Suo 2014-06-10 16:04:09 UTC
Hi Jay Philips,

I do not reproduce with 4.3.0.0 beta2, ubuntu 14.04 x86.
Will you please open the html file with LO, and check "File - Properties - Description - Title". If that field is "TestHTML", then set it to blank, then close, start start-center and remove the previous filename from the list, close, then open the html file again, close, then check the start center again...~~
Comment 2 Yousuf Philips (jay) (retired) 2014-06-10 17:27:31 UTC
Created attachment 100834 [details]
zip file containing two html files

Hi suokunlong,

Yes i check the file properties and TestHTML was in the title and i thought i was wrong and was going to close it, but when i checked another file with also had TestHTML in its title, it displays in the start center as the full filename.

TestHTML_after_edit_LO.html shows as TestHTML
TestHTML_before_edit_LO2-after.html shows as TestHTML_before_edit_LO2-after
Comment 3 Jean-Baptiste Faure 2014-08-06 07:27:14 UTC
Confirmed: rename your file "TestHTML_after_edit_LO.html" in "Test_HTML_after_edit_LO.html" then open it with LO and close the file. The StartCenter shows "TestHTML", the underscore is skipped. It does not happen with other formats like ODF, OOXML, etc.

tested with LO 4.3.1.0.0+ build at home under Ubuntu 14.04 x86-64.

Best regards. JBF
Comment 4 Efe Gürkan YALAMAN 2014-11-05 07:33:47 UTC
Created attachment 108931 [details]
screenshot

The bug occurs only on HTML files with filled <title> tag.

If it is a doc, or odt file it shows underscore. If it is a HTML with empty <Title> tag it show it too.



Version: 4.4.0.0.alpha1+
Build ID: 56019dcb79475606952a954fe732a3109441ffec
Comment 5 QA Administrators 2015-12-20 16:20:53 UTC Comment hidden (obsolete)
Comment 6 Jean-Baptiste Faure 2016-01-06 21:15:05 UTC
(In reply to Efe Gürkan YALAMAN from comment #4)
> 
> The bug occurs only on HTML files with filled <title> tag.
> 
> If it is a doc, or odt file it shows underscore. If it is a HTML with empty
> <Title> tag it show it too.

Still reproducible with Version: 5.1.0.1.0+
Build ID: f1d55069f1997e40fa20a5251d450eefe9171268
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
Ubuntu_15.10_x86-64
Locale : fr-FR (fr_FR.UTF-8)

Best regards. JBF
Comment 7 Commit Notification 2016-06-20 10:18:57 UTC
Akshay Deep committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=487a6b491f8a514541eccf3aef20277493c66744

tdf#79889 Make Recent Docs thumbnail titles consistent with recent files menu

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.