tdf#79889 Make Recent Docs thumbnail titles consistent with recent files menu

Change-Id: I839039e68c766480458a5956cf1261819c0ea005